--- a/lib/gui/css/main.css
+++ b/lib/gui/css/main.css
@@ -6507,6 +6507,63 @@ svg-icon {
   .modal-file-selector-modal > .modal-content {
     height: calc(100vh - 20px); }
 
+.on-screen-kb input {
+  font-family: Monospaced Number,Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative;
+  display: inline-block;
+  padding: 4px 11px;
+  width: 100%;
+  height: 32px;
+  font-size: 14px;
+  line-height: 1.5;
+  color: rgba(0, 0, 0, 0.65);
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  -webkit-transition: all .3s;
+  transition: all .3s; }
+
+.ui-keyboard {
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  background-color: black;
+  padding: 0.5em; }
+  .ui-keyboard .ui-keyboard-button {
+    background-color: #3e3e3e;
+    color: whitesmoke;
+    padding: 0.5em 1.5em;
+    margin: 0.2em;
+    border: 0;
+    border-radius: 0.1em;
+    font-size: 1.7em;
+    border-top: 1px solid #4e4e4e; }
+  .ui-keyboard .ui-keyboard-space {
+    width: 40%; }
+  .ui-keyboard .ui-keyboard-bksp,
+  .ui-keyboard .ui-keyboard-enter,
+  .ui-keyboard .ui-keyboard-shift,
+  .ui-keyboard .ui-keyboard-meta-1,
+  .ui-keyboard .ui-keyboard-meta-2 {
+    background-color: #1c1c1c; }
+
+.keyboard-wrapper input.ui-keyboard-input {
+  border: 1px solid #c6c8c9;
+  border-radius: 3px;
+  font-size: 1.5em;
+  height: 2.2em;
+  width: 19em;
+  padding: 0 1em; }
+
 /*
  * Copyright 2018 resin.io
  *
